// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductImage should increment the counter 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    Product card
  </h1>
  <span>
    0
  </span>
  <button
    onClick={[Function]}
  />
</div>
`;

exports[`ProductImage should increment the counter 2`] = `"1"`;

exports[`ProductImage should show our component correctly 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    Product Card
  </h1>
</div>
`;
